--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,20 +7,21 @@ body {
     display: flex;
     font-size: 16px;
     justify-content: center;
-    background-color: var(--color-2);
     overflow: auto;
     font-family: "IBM Plex Mono";
 }
 
+
 /* Spiegelanimation für title1 (rechts) */
 .title1 { 
+  display: grid;
   font-family: "OffBitTrial-101", "IBM Plex Mono";
   margin: 50px;
-  padding: 0px 30% 0px 0px; 
+  padding: 1.2% 30% 0px 0.5%; 
   font-weight: normal;
-  text-align: center;
+  text-align: left;
   text-transform: uppercase;
-  font-size: 200px;
+  font-size: 2em;
   line-height: 0.9em;
   letter-spacing: 0.1em;
   color: var(--color-2);
@@ -36,6 +37,7 @@ body {
   text-align: center;
   text-transform: uppercase;
   font-size: 200px;
+  line-height: -1em;
   letter-spacing: 0.1em;
   color: var(--color-2);
   animation: mirrorRight 0s infinite alternate;
@@ -57,45 +59,29 @@ body {
   animation: mirrorLeft 0s infinite alternate;
 }
 
-/* Spiegelanimation an der rechten vertikalen Achse */
-@keyframes mirrorRight {
-  0% {
-    transform: scaleX(-1); /* Keine Spiegelung, bleibt an der rechten Position */
-  }
-  100% {
-    transform: scaleX(1); /* Spiegeln an der vertikalen Achse */
-  }
-}
-
-/* Spiegelanimation an der linken vertikalen Achse */
-@keyframes mirrorLeft {
-  0% {
-    transform: scaleX(-1); /* Spiegeln an der linken vertikalen Achse */
-  }
-  100% {
-    transform: scaleX(1); /* Keine Spiegelung, bleibt an der linken Position */
-  }
-}
-
 .aboutbox-dropdown {
-  position: relative;
-  display: inline-block;  
-  left: 22%;
-  top: 125%;
+  position: absolute;
+  display: block;  
+  left: 4%;
+  top: 50%;
   width: 200px;
   height: 100px;
   z-index: 999;
+  border-radius: 25px 0px 0px 0px;
   
 }
 
 .aboutbox-dropdown-content {
   display: none;
   position: absolute;
-  background-color: #f9f9f9;
-  min-width: 300px;
-  min-height: 600px;
-  padding: 12px 16px;
+  background-color: var(--color-2);
+  min-width: 362px;
+  min-height: 500px;
+  padding: 0% 12% 12% 10%;
   z-index: 999;
+  border-radius: 25px 0px 0px 0px;
+  box-shadow: 0px 0px 60px 20px var(--color-1); 
+  mix-blend-mode: multiply;
 }
 
 .aboutbox-dropdown:hover .aboutbox-dropdown-content {
@@ -105,7 +91,7 @@ body {
 
 .abouttypo {
   font-family: "Fluxisch Else";
-  font-size: 25px;
+  font-size: 1.6em;
   position: absolute;
   left:25%;
   top:25%;
@@ -118,8 +104,10 @@ body {
 
 
 .grandparent {
-    background-color: var(--color-1);
-    width: 100vw;
+  background-color: var(--color-1);
+  background-image: url("/XXassets/img/Background/Layout_Background-dunkel-2.jpg");
+  background-size: cover; /* Skaliert das Bild, sodass es den gesamten Bereich ausfüllt */
+  width: 100vw;
     height: 100vh;
     margin: 0px;
     line-height: 50px;
@@ -128,9 +116,9 @@ body {
    }
 
    .parent {
+
     display: flex;
     flex-wrap: nowrap;
-    background-color: var(--color-1);
     flex-direction: row;
     justify-content:space-between;
     z-index: 0;
@@ -220,6 +208,8 @@ body {
 .post-container {
   position: relative;
   margin: 65px;
+  top: 8%
+  
 }
 
 .post-box {
@@ -227,6 +217,7 @@ position: relative;
 border-radius: 25px 0px 0px 0px;
 border: 2px solid var(--color-1);
 background-color: var(--color-2);
+
 }
 
 .box-1 {
@@ -239,6 +230,7 @@ background-color: var(--color-2);
   background-color: var(--color-2);
   transform: skewY(-20deg);
   z-index: 1;
+  
   }
   
   .box-1:hover {
@@ -560,8 +552,9 @@ img:hover {
 .crossword {
   display: grid;
   justify-content: center;
+  
   grid-template-columns: repeat(10, 9%);
-  padding-left: 25%;
+  padding-left: 37.5%;
   grid-auto-rows: 24%;
   gap: 0px;
   margin: 0px;
@@ -575,8 +568,9 @@ img:hover {
 }
 
 .cell {
-  width: 55px;
-  height: 85px;
+  width: 60px;
+  height: 96px;
+  top: 33%;
   border: 2px solid var(--color-1);
   display: flex;
   justify-content: center;
@@ -588,12 +582,12 @@ img:hover {
 }
 
 .cell.hidden {
-  background-color:var(--color-1);
+  background-color: var(--color-1);
   border-radius: 0px 0px 0px 0px;
 }
 
 .letter {
-font-size: 2rem;
+font-size: 2.5rem;
 font-family: "OffBitTrial-101";
 color: rgb(60, 40, 244);
 font-weight: bold;
@@ -732,9 +726,8 @@ color: inherit;
 
 p {
   font-family: "Fluxisch Else";
-  margin: 1em;
   padding: top right bottom left;
-  padding: 0px 20px;
+  padding: 0px 0px;
   font-weight: normal;
   text-align:left;
   font-size: 16px;
@@ -765,15 +758,14 @@ h1 {
 }
 
 h3 {
-
-  padding-right: 10px;
+  font-family: "Fluxisch Else";
   font-weight: normal;
   text-align: left;
   text-transform: uppercase;
-  font-size: 16px;
-  line-height: 1.15em;
+  font-size: 1.6em;
+  line-height: 1em;
   color: var(--color-1);
-  font-family: KosugiMaru-Regular;
+  
 }
 
    h6 {
