--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,7 +15,7 @@ body {
 
 header {
 padding: 3px;
-z-index: 10;
+z-index: 0;
 }
 
 .title1 { 
@@ -118,7 +118,6 @@ z-index: 10;
    }
 
    .parent {
-
     display: flex;
     flex-wrap: nowrap;
     flex-direction: row;
@@ -578,16 +577,33 @@ z-index: 4;
     color: inherit;
 }
 
-
-.crossword:hover {
-  cursor: crosshair;
+img {
+  width: 150px;
+  padding: 0px;
+  padding-bottom: 30px;
+  border-radius: 15px 0px 0px 0px;
 }
 
+.imgcredit {
+  width: 1fr;
+  font-weight: normal;
+  margin: 25px;
+  font-size: 10px;
+  text-transform: lowercase;
+  line-height: 1em;
+  transform: rotate(0deg); /* Dreht den Text */
+  z-index: 1;
+  color: var(--color-2);
+  opacity: 0
+} 
+
+.imgcredit:hover {
+  opacity: 1;
+}
 
 img:hover {
   cursor: crosshair;
 }
-
 
 .crossword {
   display: grid;
@@ -616,7 +632,10 @@ img:hover {
   grid-auto-rows: 24%;
   gap: 0px;
   margin: 0px;
-  
+}
+
+.crossword:hover {
+  cursor: crosshair;
 }
 
 
@@ -659,35 +678,11 @@ color: var(--color-1) ;
 opacity: 1;
 }
 
-
-img {
-    width: 150px;
-    padding: 0px;
-    padding-bottom: 30px;
-    border-radius: 15px 0px 0px 0px;
-  }
-
-  .imgcredit {
-    width: 1fr;
-    font-weight: normal;
-    margin: 25px;
-    font-size: 10px;
-    text-transform: lowercase;
-    line-height: 1em;
-    transform: rotate(0deg); /* Dreht den Text */
-    z-index: 1;
-    color: var(--color-2);
-    opacity: 0
-  } 
-
-  .imgcredit:hover {
-    opacity: 1;
-  }
-
   .button {
     font-family: "Fluxisch Else";
     border-radius: 25px;
     border-style: dashed;
+    padding-top: 3px;
     padding-left: 6px;
     padding-right: 6px;
     border-width: 1px;
@@ -698,7 +693,7 @@ img {
     color: var(--color-1);
     text-align: center;
     font-weight: normal;
-    font-size: 1em;
+    font-size: 0.9em;
     text-transform: lowercase;
     line-height: 1em;
     transform: rotate(0deg); /* Dreht den Text */
