--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,25 +14,74 @@ body {
 }
 
 header {
-padding: 3px;
+padding-left: 10px;
+padding-top:10px;
 z-index: 0;
+background-color: var(--color-1);
+animation: colorChange 120s infinite alternate;
+}
+
+main {
+  background-color: var(--color-1);
+  animation: colorChange 120s infinite alternate;
 }
 
 .title1 { 
-  display: flex;
+  position: fixed;
+  top: 3.2%;
+  left: 2%;
   font-family: "OffBitTrial-101", "IBM Plex Mono";
-  margin: 50px;
+  margin: 20px;
   padding: 1.2% 30% 0px 0.5%; 
   font-weight: normal;
   text-align: left;
   text-transform: uppercase;
-  font-size: 2em;
+  font-size: 5em;
   line-height: 0.9em;
   letter-spacing: 0.1em;
   color: var(--color-2);
 }
 
 .title2 { 
+  position: absolute;
+  top: 3.2%;
+  left: 16%;
+  font-family: "OffBitTrial-101", "IBM Plex Mono";
+  margin-top: 20px;
+  padding: 1.2% 30% 0px 0.5%; 
+  font-weight: normal;
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 5em;
+  line-height: 0.9em;
+  letter-spacing: 0.1em;
+  color: transparent;
+  z-index: 1;
+  opacity: 0;
+  transition: opacity 2s ease-in;
+}
+
+.title2.show {
+  opacity: 1;
+}
+
+.title3 {
+  position: absolute;
+  top: 3.2%;
+  left: 31%;
+  font-family: "OffBitTrial-101", "IBM Plex Mono";
+  margin: 20px;
+  padding: 1.2% 30% 0px 0.5%; 
+  font-weight: normal;
+  text-align: left;
+  text-transform: uppercase;
+  font-size: 5em;
+  line-height: 0.9em;
+  letter-spacing: 0.1em;
+  color: var(--color-2);
+}
+
+.title4 {
   display: flex;
   font-family: "OffBitTrial-101", "IBM Plex Mono";
   margin: 50px;
@@ -46,16 +95,18 @@ z-index: 0;
   color: var(--color-2);
 }
 
-/* Spiegelanimation für title3 (links) */
-.title3 {
-  display: flex;
+
+.archive {
+  position: absolute;
+  top: 120%;
+  left: 25%;
   font-family: "OffBitTrial-101", "IBM Plex Mono";
-  margin: 50px;
+  margin: 20px;
   padding: 1.2% 30% 0px 0.5%; 
   font-weight: normal;
   text-align: left;
   text-transform: uppercase;
-  font-size: 2em;
+  font-size: 2.5em;
   line-height: 0.9em;
   letter-spacing: 0.1em;
   color: var(--color-2);
@@ -65,7 +116,7 @@ z-index: 0;
   position: absolute;
   display: block;  
   left: 4%;
-  top: 25%;
+  top: 77.5%;
   width: 200px;
   height: 100px;
   z-index: 999;
@@ -79,7 +130,7 @@ z-index: 0;
   background-color: var(--color-2);
   min-width: 362px;
   min-height: 384px;
-  padding: 0% 12% 12% 10%;
+  padding: 12% 12% 12% 10%;
   z-index: 999;
   border-radius: 25px 0px 0px 0px;
   box-shadow: 0px 0px 60px 20px var(--color-1); 
@@ -107,8 +158,10 @@ z-index: 0;
 
 .grandparent {
   background-color: var(--color-1);
-  background-image: url("/XXassets/img/Background/Layout_Background-dunkel-2.jpg");
+  animation: colorChange 120s infinite alternate;
+  background-image: url("/XXassets/img/Background/Layout_Background-dunkel-3.jpg");
   background-size: cover; /* Skaliert das Bild, sodass es den gesamten Bereich ausfüllt */
+  mix-blend-mode: lighten;
   width: 100vw;
     height: 100vh;
     margin: 0px;
@@ -184,7 +237,7 @@ z-index: 0;
 .bookcontainer {
   display: flex;
   width: 95vw; /* Volle Breite des Viewports */
-  height: 90vh; 
+  height: 100vh; 
   background-color: var(--color-1);
 }
 
@@ -192,13 +245,13 @@ z-index: 0;
   width: 50vw; /* 50% der Breite */
   height: 90vh; /* Volle Höhe */
   background-color: var(--color-2); /* Beispiel-Hintergrundfarbe */
-  display: flex;
+  display: grid;
   flex-direction: column;
   padding: 20px;
-  box-shadow: 20px 20px 30px grey;
+  box-shadow: 5px 5px 30px grey;
   border-radius: 25px 0px 0px 0px;
   column-gap: 200px; /* Abstand zwischen den Spalten */
-  margin: 25px;
+  margin: 60px;
   line-height: 1.6; /* Zeilenhöhe für Lesbarkeit */
   overflow: auto;
   text-align: left;
@@ -210,9 +263,34 @@ z-index: 0;
   background-color: var(--color-1); /* Beispiel-Hintergrundfarbe */
   display: flex;
   padding: 20px;
-  overflow-x: hidden;
+  overflow-x: auto;
+}
 
- /* Zentriere Inhalt horizontal */
+.listperson {
+  width: 18vw; /* 50% der Breite */
+  height: 100vh; /* Volle Höhe */
+  background-color: var(--color-2); /* Beispiel-Hintergrundfarbe */
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
+  border-radius: 25px 0px 0px 0px;
+  column-gap: 200px; /* Abstand zwischen den Spalten */
+  margin-top: 60px;
+  margin-left: 60px;
+  line-height: 1.6; /* Zeilenhöhe für Lesbarkeit */
+  overflow: auto;
+  text-align: left;
+}
+
+.rubrik {
+  width: 80vw; /* 50% der Breite */
+  height: 100vh; /* Volle Höhe */
+  background-color: var(--color-1); /* Beispiel-Hintergrundfarbe */
+  display: flex;
+  padding: 0px;
+  margin-top: 8%;
+  padding-left: 25%;
+  overflow-x: hidden;
 }
 
 .discipline {
@@ -242,10 +320,15 @@ z-index: 0;
   text-align: left;
 }
 
+ul {
+  list-style: none;
+}
+
 .post-container {
   position: relative;
-  margin: 65px;
-  top: 25%
+  margin: 70px;
+  top: 60%;
+  
   
 }
 
@@ -584,6 +667,8 @@ img {
   border-radius: 15px 0px 0px 0px;
 }
 
+
+
 .imgcredit {
   width: 1fr;
   font-weight: normal;
@@ -612,7 +697,8 @@ img:hover {
   padding-left: 37.5%;
   grid-auto-rows: 24%;
   gap: 0px;
-  margin: 0px;
+  margin-top: 16.6%;
+ 
   
 }
 
@@ -624,12 +710,12 @@ img:hover {
 }
 }
 
-.crossword2 {
+.crosswordsocial {
+
   display: grid;
   justify-content: center;
-  grid-template-columns: repeat(6, 9%);
-  padding-left: 37.5%;
-  grid-auto-rows: 24%;
+  grid-template-columns: repeat(6, 15%);
+  grid-auto-rows: 13%;
   gap: 0px;
   margin: 0px;
 }
@@ -656,6 +742,7 @@ img:hover {
 .cell.hidden {
   background-color: var(--color-1);
   border-radius: 0px 0px 0px 0px;
+  mix-blend-mode:lighten;
 }
 
 .letter {
@@ -683,14 +770,15 @@ opacity: 1;
     border-radius: 25px;
     border-style: dashed;
     padding-top: 3px;
+    padding-bottom: 7px;
     padding-left: 6px;
     padding-right: 6px;
     border-width: 1px;
+    animation: colorChange 120s infinite alternate;
     border-color: var(--color-1);
     background: var(--color-2);
     width: fit-content;
-    height: 25px;
-    color: var(--color-1);
+    height: fit-content;
     text-align: center;
     font-weight: normal;
     font-size: 0.9em;
@@ -699,27 +787,31 @@ opacity: 1;
     transform: rotate(0deg); /* Dreht den Text */
     z-index: 1;
     
+    
   }
   
   .button:hover {
     font-family: "Fluxisch Else";
     border: 2px;
     border-style: dashed;
+    padding-top: 3px;
+    padding-bottom: 7px;
     padding-left: 6px;
     padding-right: 6px;
     border-color: var(--color-1);
     background: var(--color-1);
     width: fit-content;
-    height: 25px;
+    height: fit-content;
     color:var(--color-2);
     text-align: center;
     font-weight: normal;
-    font-size: 1em;
+    font-size: 0.9em;
     text-transform: lowercase;
     line-height: 1em;
     transform: rotate(-12deg); /* Dreht den Text */
     z-index: 1;
     cursor: crosshair;
+    
   }
   
   .button:active {
@@ -796,6 +888,19 @@ h1 {
   color: var(--color-1);
 }
 
+h6 {
+  font-family: "Fluxisch Else";
+  margin: 0px;
+  font-weight: normal;
+  font-size: 1.4em;
+  line-height: 1em;
+  text-align: left;
+  justify-content: center;
+  text-transform: uppercase;
+  z-index: 1;
+  color: var(--color-1);
+}
+
 h3 {
   font-family: "Fluxisch Else";
   margin: 0px 0px 50px;
@@ -818,22 +923,16 @@ h4 {
   color: var(--color-1);
 }
 
-   h6 {
-    font-family: OffBitTrial-101;
-    margin: 0px;
-    padding: 10px 10px 15px 0px;
-    font-weight: normal;
-    font-size: 60px;
-    text-align: center;
-    justify-content: center;
-    text-transform: uppercase;
-    z-index: 1;
-    color: var(--color-2);
-}
+   
 
 
 :root {
   --color-1: rgb(0, 0, 0); 
   --color-2: rgb(207, 221, 250);
-  
+}
+
+@keyframes colorChange {
+  0% { --color-1: rgb(185, 92, 255); }   /* lila
+  50% { --color-1: rgb(0, 0, 0); }    /schwarz
+  100% { --color-1: rgb(0, 0, 255); } /* Blau */
 }
