--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,11 +11,12 @@ body {
     text-align: left;
     font-family: "IBM Plex Mono";
     background-color: var(--color-1);
+    animation: colorChange 120s infinite alternate;
 }
 
 header {
-padding-left: 10px;
-padding-top:10px;
+padding-left: 0.5%;
+padding-top: 0.7%;
 z-index: 0;
 background-color: var(--color-1);
 animation: colorChange 120s infinite alternate;
@@ -53,7 +54,7 @@ main {
 .title2 { 
   position: absolute;
   top: 3.2%;
-  left: 16%;
+  left: 17.5%;
   font-family: "OffBitTrial-101", "IBM Plex Mono";
   margin-top: 20px;
   padding: 1.2% 30% 0px 0.5%; 
@@ -63,7 +64,7 @@ main {
   font-size: 5em;
   line-height: 0.9em;
   letter-spacing: 0.1em;
-  color: transparent;
+  color: var(--color-2);
   z-index: 1;
   opacity: 0;
   transition: opacity 1s ease-in;
@@ -120,34 +121,28 @@ main {
   color: var(--color-2);
 }
 
+@XXkeyframes moveAcrossScreen {
+  0% { left: 0; }
+  25% { top: 90%; }
+  50% { left: 49%; }
+  75% { top: 110%; }
+  100% { left: 0; }
+}
 
-.archive {
-  position: absolute;
-  top: 114%;
-  left: 49%;
-  font-family: "OffBitTrial-101", "IBM Plex Mono";
-  margin: 20px;
-  padding: 1.2% 30% 0px 0.5%; 
-  font-weight: normal;
-  text-align: left;
-  text-transform: uppercase;
-  font-size: 2em;
-  line-height: 0.9em;
-  letter-spacing: 0.1em;
-  color: var(--color-2);
-  z-index: 2;
-  cursor: crosshair;
+.aboutbox-dropdown:hover {
+  animation-play-state: paused; /* Stoppt die Bewegung beim Hover */
 }
 
 .aboutbox-dropdown {
   position: absolute;
   display: block;  
   left: 4%;
-  top: 77.5%;
+  top: 100%;
   width: 200px;
   height: 100px;
   z-index: 999;
   border-radius: 25px 0px 0px 0px;
+  animation: moveAcrossScreen 12s linear infinite;
 }
 
 @media (max-width: 480px) {
@@ -218,6 +213,8 @@ main {
   border-radius: 25px 0px 0px 0px;
   box-shadow: 0px 0px 60px 20px var(--color-1); 
   mix-blend-mode: multiply;
+  animation: colorChange 120s infinite alternate;
+    
 }
 
 .impressumbox-dropdown:hover .impressumbox-dropdown-content {
@@ -228,11 +225,10 @@ main {
   font-family: "Fluxisch Else";
   font-size: 1.6em;
   position: absolute;
-  left:25%;
+  left: 30%;
   top:25%;
   font-weight: normal;
   text-align: center;
-  text-transform: uppercase;
   z-index: 1;
   color:var(--color-2);
 }
@@ -241,7 +237,7 @@ main {
 .grandparent {
   background-color: var(--color-1);
   animation: colorChange 120s infinite alternate;
-  background-image: url("/assets/img/Background/Layout_Background-dunkel-3.jpg");
+  background-image: url("/XXassets/img/Background/Layout_Background-dunkel-3.jpg");
   background-size: cover; /* Skaliert das Bild, sodass es den gesamten Bereich ausfüllt */
   mix-blend-mode: lighten;
   width: 100vw;
@@ -325,7 +321,7 @@ main {
 
 .bookleft {
   width: 50vw; /* 50% der Breite */
-  height: 90vh; /* Volle Höhe */
+  height: 85vh; /* Volle Höhe */
   background-color: var(--color-2); /* Beispiel-Hintergrundfarbe */
   display: grid;
   flex-direction: column;
@@ -343,10 +339,121 @@ main {
   width: 50vw; /* 50% der Breite */
   height: 100vh; /* Volle Höhe */
   background-color: var(--color-1); /* Beispiel-Hintergrundfarbe */
-  display: flex;
+  display: grid;
   padding: 20px;
   overflow-x: auto;
 }
+
+.grid-container {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr); /* 5 Spalten */
+  grid-template-rows: repeat(4, 1fr); /* 7 Zeilen */
+  gap: 10px; /* Abstand zwischen Boxen */
+  width: 90%;
+  max-width: 1200px;
+}
+
+.grid-box-hl {
+  background-color: var(--color-1);
+  color: var(--color-1);
+  display: flex;
+  justify-content: center;
+  align-items: self-start;
+
+}
+.grid-box-p {
+  background-color: var(--color-1);
+  color: var(--color-1);
+  display: flex;
+  justify-content: center;
+  max-width: 80%;
+  align-items: self-end;
+  padding-top: 3.6em;
+  padding-right: 4em;
+  font-size: 1em;
+  line-height: 1.48em;
+  border-radius: 8px;
+  
+}
+
+/* Responsive Anpassung */
+@media (max-width: 800px) {
+  .grid-container {
+      grid-template-columns: repeat(3, 1fr); /* 3 Spalten für Tablets */
+      grid-template-rows: auto;
+  }
+}
+
+@media (max-width: 500px) {
+  .grid-container {
+      grid-template-columns: repeat(2, 1fr); /* 2 Spalten für Smartphones */
+  }
+}
+
+  .img-container img {
+            width: 150px;
+            height: auto;
+            cursor: crosshair;
+            transition: transform 0.3s ease;
+            mix-blend-mode:luminosity;
+            
+        }
+
+        .img-container img:hover {
+            transform: scale(1.1);
+        }
+
+        /* Modal-Styling */
+        .modal {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: var(--color-1);
+            justify-content: center;
+            text-align: center;
+            padding: 2.5%;
+            mix-blend-mode:luminosity;
+            transition: mix-blend-mode 0.5s ease;
+            z-index: 60;
+        }
+
+        /* Hover-Effekt: Wechsel des blend-mode */
+        .grid-container:hover .modal {
+            mix-blend-mode:normal;
+        }
+
+        /* Großes Bild */
+        .modal img {
+            max-width: 70%;
+            object-fit: contain;
+            height: 90vh;
+            border-radius: 0px;
+            margin-right: 10px;
+            margin-left: 10px;
+        }
+
+        /* Schließen-Button */
+        .modal a {
+            display: block;
+          
+        
+          
+        }
+
+        /* Wenn das Ziel (target) erreicht wird, zeige das Modal */
+        #img1:target,
+        #img2:target,
+        #img3:target,
+        #img4:target,
+        #img5:target,
+        #img6:target,
+        #img7:target,
+        #img8:target {
+            display: flex;
+        }
 
 .listperson {
   width: 18vw; /* 50% der Breite */
@@ -410,16 +517,19 @@ ul {
   position: relative;
   margin: 70px;
   top: 90%;
+ 
 }
 
 
 .post-box {
 position: relative;
+opacity: 0.65;
 padding: 20px;
 top: 130%;
 border-radius: 25px 0px 0px 0px;
 border: 2px solid var(--color-1);
 background-color: var(--color-2);
+min-height: 50%;
 }
 
 @media (max-width: 480px) { 
@@ -438,50 +548,50 @@ background-color: var(--color-2);
   position: absolute;
   margin-top: 2.5%;
   left: 50%;
-  width: 230px;
-  min-height: 530px;
+  width: 17%;
   border-radius: 25px 0px 0px 0px;
-  border: 2px solid var(--color-1);
   background-color: var(--color-2);
   transform: skewY(-20deg);
   z-index: 1;
-  
-  }
-  
-  .box-1:hover {
-    margin-top: 7%;
-    width: 350px;
-    transform: skewY(5deg);
-    z-index: 7;
   }
 
   .box-2 {
   position: absolute;
   margin-top: 4%;
   left: 50%;
-  width: 280px;
-  min-height: 530px;
+  width: 19%;
   border-radius: 25px 0px 0px 0px;
-  border: 2px solid var(--color-1);
   background-color: var(--color-2);
   transform: skewY(-10deg);
   z-index: 2;}
   
-  .box-2:hover {
+
+
+.box-3:hover {
     margin-top: 7%;
-    width: 350px;
+    opacity: 100%;
+    width: 21%;
+    z-index: 7;
+    transition: 0.5s ease-in;
+    cursor: crosshair;
+  }
+
+  .box-2:hover, .box-4:hover, .box-5:hover {
+    margin-top: 7%;
+    opacity: 100%;
+    width: 21%;
     transform: skewY(5deg);
     z-index: 7;
+    transition: 0.8s ease-in;
+    cursor: crosshair;
   }
   
 .box-3 {
 position: absolute;
 margin-top: 7%;
 left: 50%;
-width: 315px;
-min-height: 400px;
+width: 21%;
 border-radius: 25px 0px 0px 0px;
-border: 2px solid var(--color-1);
 background-color: var(--color-2);
 transform: skewY(5deg);
 z-index: 3;
@@ -491,10 +601,8 @@ z-index: 3;
 position: absolute;
 margin-top: 10.4%;
 left: 50%;
-width: 250px;
-min-height: 530px;
+width: 18%;
 border-radius: 25px 0px 0px 0px;
-border: 2px solid var(--color-1);
 background-color: var(--color-2);
 transform: skewY(25deg);
 z-index: 4;
@@ -504,10 +612,8 @@ z-index: 4;
 position: absolute;
 margin-top: 12.8%;
 left: 50%;
-width: 180px;
-min-height: 600px;
+width: 12%;
 border-radius: 25px 0px 0px 0px;
-border: 2px solid var(--color-1);
 background-color: var(--color-2);
 transform: skewY(45deg);
 z-index: 5;
@@ -517,23 +623,29 @@ z-index: 5;
   position: absolute;
   margin-top: 12.8%;
   right: 49.9%;
-  width: 180px;
-  min-height: 530px;
+  width: 12%;
   border-radius: 0px 25px 0px 0px;
-  border: 2px solid var(--color-1);
   background-color: var(--color-2);
   transform: skewY(-45deg);
   z-index: 6;
+  }
+
+  .box-6:hover, .box-7:hover, .box-8:hover {
+    margin-top: 7%;
+    opacity: 100%;
+    width: 21%;
+    transform: skewY(-5deg);
+    z-index: 7;
+    transition: 0.8s ease-in;
+    cursor: crosshair;
   }
 
 .box-7 {
 position: absolute;
 margin-top: 10.4%;
 right: 49.9%;
-width: 250px;
-min-height: 530px;
+width: 18%;
 border-radius: 0px 25px 0px 0px;
-border: 2px solid var(--color-1);
 background-color: var(--color-2);
 transform: skewY(-25deg);
 z-index: 5;
@@ -543,10 +655,8 @@ z-index: 5;
 position: absolute;
 margin-top: 7%;
 right: 49.9%;
-width: 315px;
-min-height: 530px;
+width: 21%;
 border-radius: 0px 25px 0px 0px;
-border: 2px solid var(--color-1);
 background-color: var(--color-2);
 transform: skewY(-5deg); 
 z-index: 4;
@@ -554,24 +664,34 @@ z-index: 4;
 
 .box-9 {
 position: absolute;
-margin-top: 52%;
+margin-top: 70%;
 left: 50%;
-width: 315px;
-min-height: 530px;
+width: 18%;
 border-radius: 25px 0px 0px 0px;
-border: 2px solid var(--color-1);
 background-color: var(--color-2);
-transform: skewY(20deg);
+transform: skewY(25deg);
 z-index: 3;
 }
 
+.box-9:hover {
+  position: absolute;
+  margin-top: 70%;
+  left: 50%;
+  width: 21%;
+  opacity: 100%;
+  transition: 0.8s ease-in;
+  border-radius: 25px 0px 0px 0px;
+  background-color: var(--color-2);
+  transform: skewY(5deg);
+  z-index: 7;
+  } 
+
 .box-10 {
   position: absolute;
-  margin-top: 58%;
+  margin-top: 65%;
   right: 49.9%;
-  width: 315px;
+  width: 21%;
   border-radius: 0px 25px 0px 0px;
-  border: 2px solid var(--color-1);
   background-color: var(--color-2);
   transform: skewY(-5deg);
   z-index: 2;
@@ -579,12 +699,10 @@ z-index: 3;
 
 .box-11 {
 position: absolute;
-margin-top: 62%;
+margin-top: 69%;
 right: 49.9%;
-width: 250px;
-min-height: 530px;
+width: 18%;
 border-radius: 0px 25px 0px 0px;
-border: 2px solid var(--color-1);
 background-color: var(--color-2);
 transform: skewY(-25deg); 
 z-index: 4;
@@ -592,38 +710,44 @@ z-index: 4;
 
 .box-12 {
   position: absolute;
-  margin-top: 65%;
+  margin-top: 72%;
   right: 49.9%;
-  width: 180px;
-  min-height: 600px;
+  width: 12%;
   border-radius: 0px 25px 0px 0px;
-  border: 2px solid var(--color-1);
   background-color: var(--color-2);
   transform: skewY(-45deg);
   z-index: 6;
   }
 
+  .box-10:hover, .box-11:hover, .box-12:hover {
+    margin-top: 65%;
+    opacity: 100%;
+    width: 21%;
+    transform: skewY(-5deg);
+    z-index: 7;
+    transition: 0.8s ease-in;
+    cursor: crosshair;
+  }
+
   .box-13 {
     position: absolute;
-    margin-top: 95%;
+    margin-top: 115%;
     left: 50%;
-    width: 230px;
-    min-height: 530px;
+    width: 19%;
     border-radius: 25px 0px 0px 0px;
     border: 2px solid var(--color-1);
     background-color: var(--color-2);
     transform: skewY(-20deg);
     z-index: 1;
     }
-    
+   
+
   .box-14 {
     position: absolute;
-    margin-top: 100%;
+    margin-top: 120%;
     left: 50%;
-    width: 315px;
-    min-height: 400px;
+    width: 21%;
     border-radius: 25px 0px 0px 0px;
-    border: 2px solid var(--color-1);
     background-color: var(--color-2);
     transform: skewY(5deg);
     z-index: 3;
@@ -631,43 +755,21 @@ z-index: 4;
 
   .box-15 {
     position: absolute;
-    margin-top: 104%;
+    margin-top: 124%;
     left: 50%;
-    width: 250px;
-    min-height: 530px;
+    width: 18%;
     border-radius: 25px 0px 0px 0px;
-    border: 2px solid var(--color-1);
     background-color: var(--color-2);
     transform: skewY(25deg);
     z-index: 4;
     }
-
-    
-      .box-1:hover {
-        margin-top: 7%;
-        width: 350px;
-        transform: skewY(5deg);
-        z-index: 7;
-      }
-    
-      
-      .box-2:hover {
-        margin-top: 7%;
-        width: 350px;
-        transform: skewY(5deg);
-        z-index: 7;
-      }
-      
-   
     
     .box-16 {
     position: absolute;
     margin-top: 10.4%;
     left: 50%;
     width: 250px;
-    min-height: 530px;
     border-radius: 25px 0px 0px 0px;
-    border: 2px solid var(--color-1);
     background-color: var(--color-2);
     transform: skewY(25deg);
     z-index: 4;
@@ -678,9 +780,7 @@ z-index: 4;
     margin-top: 12.8%;
     left: 50%;
     width: 180px;
-    min-height: 600px;
     border-radius: 25px 0px 0px 0px;
-    border: 2px solid var(--color-1);
     background-color: var(--color-2);
     transform: skewY(45deg);
     z-index: 5;
@@ -688,22 +788,42 @@ z-index: 4;
     
 .fan {
   position: absolute;
-  margin-top: 0.5%;
+  margin-top: 2%;
   left: 50%;
-  min-height: 400px;
-  width: 160px;
+  min-height: 330%;
+  width: 11%;
   border-radius: 25px 0px 0px 0px;
   border: 1.5px solid var(--color-2);
   background-color: var(--color-1);
   transform: skewY(-40deg);
-  z-index: 0;  
+  z-index: 0;
+  padding-left: 1%;
+  padding-top: 3%;
+  font-family: "OffBitTrial-101", "IBM Plex Mono";
+    font-weight: normal;
+    text-align: left;
+    text-transform: uppercase;
+    font-size: 2em;
+    line-height: 0.9em;
+    letter-spacing: 0.1em;
+    color: var(--color-2);
+    z-index: 2;
+    cursor: crosshair;
+}
+
+.fan:hover {
+  margin-top: 7%;
+  width: 13%;
+  transform: skewY(5deg);
+  z-index: 4;
 }
 
 .fan-1 {
   position: absolute;
-  margin-top: 0.5%;
+  margin-top: 2%;
   left: 50%;
   min-height: 400px;
+  padding-left: 1%;
   width: 150px;
   border-radius: 25px 0px 0px 0px;
   border: 1.5px solid var(--color-2);
@@ -714,8 +834,9 @@ z-index: 4;
 
 .fan-2 {
   position: absolute;
-  margin-top: 0.5%;
+  margin-top: 2%;
   left: 50%;
+  padding-left: 1%;
   min-height: 400px;
   width: 140px;
   border-radius: 25px 0px 0px 0px;
@@ -754,10 +875,8 @@ z-index: 4;
 }
 
 img {
-  width: 150px;
-  padding: 0px;
-  padding-bottom: 30px;
-  border-radius: 15px 0px 0px 0px;
+  max-width: 150px;
+  border-radius: 0px 0px 0px 0px;
 }
 
 
@@ -781,6 +900,7 @@ img {
 
 img:hover {
   cursor: crosshair;
+  scale: 1;
 }
 
 .crossword {
@@ -830,6 +950,7 @@ img:hover {
   background-color: var(--color-2);
   position: relative;
   border-radius: 15px 0px 0px 0px;
+  opacity: 0.85;
   
 }
 
@@ -842,7 +963,6 @@ img:hover {
 .letter {
 font-size: 2.5rem;
 font-family: "OffBitTrial-101";
-color: rgb(60, 40, 244);
 font-weight: bold;
 color: transparent;
 opacity: 0;
@@ -855,12 +975,15 @@ opacity: 1;
 }
 
 .letter.persistent {
-color: var(--color-1) ;
+color: var(--color-1);
 opacity: 1;
 }
 
   .button {
     font-family: "Fluxisch Else";
+    border-color: var(--color-1);
+    color: var(--color-1);
+    background: var(--color-2);
     border-radius: 25px;
     border-style: dashed;
     padding-top: 3px;
@@ -868,9 +991,6 @@ opacity: 1;
     padding-left: 6px;
     padding-right: 6px;
     border-width: 1px;
-    animation: colorChange 120s infinite alternate;
-    border-color: var(--color-1);
-    background: var(--color-2);
     width: fit-content;
     height: fit-content;
     text-align: center;
@@ -880,6 +1000,7 @@ opacity: 1;
     line-height: 1em;
     transform: rotate(0deg); /* Dreht den Text */
     z-index: 1;
+    cursor: crosshair;
     
     
   }
@@ -893,10 +1014,10 @@ opacity: 1;
     padding-left: 6px;
     padding-right: 6px;
     border-color: var(--color-1);
+    color: var(--color-2);
     background: var(--color-1);
     width: fit-content;
     height: fit-content;
-    color:var(--color-2);
     text-align: center;
     font-weight: normal;
     font-size: 0.9em;
@@ -905,6 +1026,7 @@ opacity: 1;
     transform: rotate(-12deg); /* Dreht den Text */
     z-index: 1;
     cursor: crosshair;
+    animation: colorChange 120s infinite alternate;
     
   }
   
@@ -918,45 +1040,31 @@ opacity: 1;
     font-style: normal;
   }
 
-  .navigation {
-    display: flex;
-    position: fixed;
-    justify-content: space-between;
-    top: 10px; 
-  }
-
-  .navi-items {
-    padding-left: 50px;
-    padding-right: 50px;
-    width:50vw
-  }
-
-.inline-image {
-  display: block;
-  margin: 10px auto; /* Bild zentrieren */
-  max-width: 100%; /* Bildgröße an die Spaltenbreite anpassen */
-  break-inside: avoid; /* Verhindert, dass das Bild zwischen zwei Spalten geteilt wird */
-}
-
  a {
   text-decoration: none; /* Entfernt den Unterstrich */
   color: inherit;/* Optionale Farbe für den Link */
+  cursor: crosshair;
 }
 
 a:hover {
 text-decoration: underline; /* Optional: Unterstrich beim Hover */
 color: inherit;
+cursor: crosshair;
 }
 
 p {
   font-family: "Fluxisch Else";
-  padding: top right bottom left;
   padding: 0px 0px;
   font-weight: normal;
   text-align:left;
   font-size: 17px;
   line-height: 1.45em;
   color: var(--color-1);
+  text-indent: 0em;
+}
+
+p span {
+  text-indent: 2em; /* Die erste Zeile bleibt normal */
 }
 
 h1 {
@@ -972,12 +1080,11 @@ h1 {
 
   h2 {
   font-family: "OffBitTrial-101";
-  margin: 0px;
-  padding-left: 0px;
+  margin-top: 0px;
   font-weight: normal;
   text-align: left;
   text-transform: uppercase;
-  font-size: 2em;
+  font-size: 3em;
   line-height: 1em;
   color: var(--color-1);
 }
@@ -986,24 +1093,37 @@ h6 {
   font-family: "Fluxisch Else";
   margin: 0px;
   font-weight: normal;
-  font-size: 1.4em;
+  font-size: 1.8em;
   line-height: 1em;
   text-align: left;
-  padding-bottom: 20%;
-  padding-top: 60%;
+  padding-left: 1%;
+  padding-right: 1%;
   justify-content: center;
-  text-transform: uppercase;
+  z-index: 1;
+  color: var(--color-2);
+}
+
+h5 {
+  font-family: "Fluxisch Else";
+  margin: 0px;
+  font-weight: normal;
+  font-size: 1.5em;
+  line-height: 1.1em;
+  text-align: left;
+  padding-bottom: 20%;
+  padding-top: 40%;
+  justify-content: center;
   z-index: 1;
   color: var(--color-1);
 }
+
 
 h3 {
   font-family: "Fluxisch Else";
   margin: 0px 0px 50px;
   font-weight: normal;
   text-align: left;
-  text-transform: uppercase;
-  font-size: 1.6em;
+  font-size: 1.9em;
   line-height: 1em;
   color: var(--color-1);
 }
@@ -1013,22 +1133,41 @@ h4 {
   margin: 0px 0px 15px;
   font-weight: normal;
   text-align: left;
-  text-transform: uppercase;
-  font-size: 1.1em;
-  line-height: 1em;
+  font-size: 1em;
+  line-height: 1.4em;
+  color: var(--color-2);
+}
+
+h7 {
+  font-family: "Fluxisch Else";
+  margin: 0px;
+  font-weight: normal;
+  font-size: 1em;
+  line-height: 1.1em;
+  text-align: left;
+  justify-content: center;
+  z-index: 1;
   color: var(--color-1);
 }
 
-   
-
+h8 {
+  font-family: "Fluxisch Else";
+  margin: 0px;
+  font-weight: normal;
+  font-size: 1em;
+  line-height: 1.1em;
+  text-align: left;
+  justify-content: center;
+  z-index: 1;
+  color: var(--color-2);
+}
 
 :root {
-  --color-1: rgb(0, 0, 0); 
+  --color-1: rgb(0, 0, 0);
   --color-2: rgb(207, 221, 250);
 }
 
 @keyframes colorChange {
-  0% { --color-1: rgb(185, 92, 255); }   /* lila
-  50% { --color-1: rgb(0, 0, 0); }    /schwarz
-  100% { --color-1: rgb(0, 0, 255); } /* Blau */
+  0% { --color-1: rgb(185, 92, 255); } 
+  100% { --color-1: rgb(0, 0, 0); }   
 }
